# Claude-Usage-Widget

./: .gitignore  BACKLOG.md  CLAUDE.md  LICENSE  README.ko.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  uno.config.ts  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
Release/: 윈도우_시작프로그램_등록.bat
Source/: BUILD_GUIDE.md  _shared.py  claude_widget.spec  main.py  make_icon.py
docs/: macos-setup.md
docs/plans/: 2026-05-20-oauth-refresh.md
docs/release-notes/: v2.0.0.md  v2.0.1.md  v2.0.2.md  v2.0.3.md  v2.1.0.md  v2.1.1.md  v2.1.2.md  v2.1.3.md  v2.1.4.md  v2.1.5.md  v2.1.6.md  v2.1.7.md  v2.2.0.md  v2.3.0.md  v2.3.1.md  v2.4.0.md  v2.4.1.md  v2.4.2.md  v2.4.3.md  v2.4.4.md  v2.4.5.md
docs/sessions/: 2026-05-24-macos-opacity-attempts.md  README.md
scripts/: bump-version.mjs  capture-tray.ps1  capture-widget.ps1  capture-widget.sh  click-mode.ps1  gen-app-icon.ps1  generate-icon.ps1  make-tray-icons.py  make-updater-manifest.mjs  probe-opacity.ps1
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  device_sync.rs  icon_render.rs  jsonl_aggregator.rs  lib.rs  main.rs  migration.rs  pricing.rs  tray.rs  usage_api.rs  vibrancy_mac.rs  vibrancy_win.rs
src/components/: Badge.tsx  CapsuleProgress.tsx  Donut.tsx  ErrorBanner.tsx  GlassCard.tsx  GlassToast.tsx  LiquidGlass.tsx  SegmentedControl.tsx  Switch.tsx
src/i18n/: en.ts  index.ts  ko.ts
src/state/: store.ts  updater.ts
src/styles/: base.css  glass.css  tokens.css
src/utils/: color.ts  drag.ts  error.ts  format.ts  math.ts  project.test.ts  project.ts
src/views/: DetailView.tsx  FooterBar.tsx  GuideView.tsx  HeaderBar.tsx  MiniView.tsx  NormalView.tsx  SettingsPanel.tsx
