[package]
name = "claude-widget"
version = "2.0.1"
description = "Claude Usage Widget — Liquid Glass"
edition = "2021"
rust-version = "1.77"

[lib]
name = "claude_widget_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-store = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
tauri-plugin-log = "2"
log = "0.4"
window-vibrancy = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
walkdir = "2"
once_cell = "1"
anyhow = "1"
dirs = "5"
image = { version = "0.25", default-features = false, features = ["png"] }
tiny-skia = "0.11"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Graphics_Dwm",
] }


[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# Strip debug symbols from the release exe (.pdb is split off, ~8.7MB saved).
# LTO tried (`lto = "thin"`) but exe size barely moved (~170KB delta on this
# project) while build time went 1.5min → 5min — bad trade. Escalated to a
# release-only profile only when stable shipping starts.
[profile.release]
strip = true
